<resources>
    <string name="app_name">Basketball Score</string>
    <string name="local_title">Local</string>
    <string name="minus_1">-1</string>
    <string name="plus_1">+1</string>
    <string name="plus_2">+2</string>
    <string name="visitor">Visitor</string>
    <string name="zero_value">0</string>
    <string name="restart_score">Restart Score</string>
    <string name="get_final_score">Get Final Score</string>
</resources>