<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tv_local_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_title"
            android:gravity="center"
            android:layout_margin="16dp"
            android:layout_alignParentTop="true"
            android:textSize="36sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/rl_second_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_local_title"
            android:layout_margin="16dp">

            <Button
                android:id="@+id/btn_local_minus_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/minus_1"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tv_local_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:textSize="96sp"
                android:textStyle="bold"
                tools:text="0" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical"
                android:gravity="center_vertical"
                android:layout_centerVertical="true">

                <Button
                    android:id="@+id/btn_local_plus_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_1"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btn_local_plus_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/plus_2"
                    android:textSize="24sp" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_third_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rl_second_section"
            android:layout_centerInParent="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_restart_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:src="@android:drawable/ic_popup_sync" />

            <ImageView
                android:layout_width="0dp"
                android:layout_height="150dp"
                android:layout_weight="1"
                android:src="@android:drawable/btn_star" />

            <ImageButton
                android:id="@+id/btn_final_score"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:src="@android:drawable/ic_media_play" />
        </LinearLayout>


        <TextView
            android:id="@+id/tv_visitor_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/visitor"
            android:gravity="center"
            android:layout_margin="16dp"
            android:textSize="36sp"
            android:layout_alignParentBottom="true"
            android:textStyle="bold" />

    </RelativeLayout>

</layout>